<resources>
    <string name="app_name">QuyenNT</string>
    <string name="itinerary_title">Khám phá Hà Nội</string>
    <string name="author_name">Nguyễn Thị Quyên</string>
    <string name="create_date">14/10/2025</string>
    <string name="itinerary_description">Chuyến đi 2 ngày khám phá Hà Nội kết hợp lịch sử, văn hóa và ẩm thực, từ các di tích biểu tượng, phố cổ sầm uất đến không gian thanh bình của Hồ Tây và làng gốm truyền thống.</string>
    <string name="date1">Ngày 1</string>
    <string name="location1_date1">Hồ Hoàn Kiếm (8:00 - 10:00)</string>
    <string name="location1_date1_des">Trái tim Hà Nội với cầu Thê Húc và Đền Ngọc Sơn, nổi tiếng với truyền thuyết gươm thần.</string>
    <string name="location2_date1">Phố cổ Hà Nội (14:00 - 17:00)</string>
    <string name="location2_date1_des">36 phố phường với ẩm thực đường phố (phở, bún chả) và không khí buôn bán sôi động.</string>
    <string name="date2">Ngày 2</string>
    <string name="comment">Bình luận</string>
    <string name="comment_nummber">(3 lượt)</string>
    <string name="share">Chia sẻ với</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="comment_title">Bình luận từ cộng đồng</string>
    <string name="like_note">người nghĩ đánh giá này hữu ích</string>

    <string name="title_pw_sale">Optimize Storage, Get Space</string>
    <string name="price_per_week_strike"><strike><b>$8.99</b>/week</strike></string>
    <string name="off_50_percent">OFF 50%</string>
    <string name="price">$3.99</string>
    <string name="per_week">/week</string>
    <string name="btn_claim_offer">CLAIM OFFER</string>
    <string name="content_pw">$3.99 for first week then $8.99 next week.\nBilled weekly, cancel anytime.</string>
    <string name="policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy</b></u> policies\n\u2022 Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n\u2022 Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n\u2022 You will not be charged if subscription is canceled before trial period ends.\n\u2022 Subscription is not required to use V9Compress</string>
    <string name="load_error">We couldn’t load the infomation</string>
    <string name="try_again"><u>Try again</u></string>

    <string name="dialog_sale_title">Faster compress made simple</string>
    <string name="percent_off">30%\nOFF</string>
    <string name="try_text">Try 3 days for FREE, then 8.99$ per week. Auto renew, cancel anytime</string>
    <string name="try_yearly">Try 3 for FREE then $[price] per year.\nAuto renew, cancel anytime.</string>

    <string name="unlock_feature_title">high-quality\ncompression</string>
    <string name="unlock_feature_subtitle">$14.99/year after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="btn_try">Try for free</string>
    <string name="policy2">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy</b></u> policies\nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.\nSubscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\nYou will not be charged if subscription is canceled before trial period ends.\nSubscription is not required to use V9Compress</string>

    <string name="pw_bottom_sheet_title">SMARTER STORAGE MADE AFFORDABLE</string>
    <string name="save_92">Saved 92%</string>
    <string name="price_per_week">Only $0.412 per week</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="yearly_fee">$19.99</string>
    <string name="weekly_fee">$4.99</string>
    <string name="per_year">/year</string>
    <string name="introduce_fee">$19.99/year after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="free_trial_title">3-day free trial enabled</string>

    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="lifetime">Lifetime</string>
    <string name="pw_onboarding_title">Shrink size\nkeep quality</string>
    <string name="free_trial_enabled">Free trial enabled</string>
    <string name="btn_continue">Continue</string>
    <string name="enable_free_trial">Enable free trial?</string>
    <string name="free_trial">%s after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="not_free_trial">%s\nAuto renew, cancel anytime</string>
    <string name="auto_renew">Auto renew at %s</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="offer_detail_placeholder">Select a plan to see details</string>
    <string name="btn_buy">Buy Now</string>
    <string name="fee_trial">%s after free %s trial ends.\nAuto renew, cancel anytime</string>
    <string name="fee_not_trial">%s\nAuto renew, cancel anytime</string>
    <string name="fee_onetime_purchase">One-time purchase for lifetime\naccess with %s</string>
    <string name="error_loading_price">Error loading price</string>
</resources>