<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33000000"
    android:paddingHorizontal="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClose"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/btn_dialog"
        android:layout_marginTop="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:background="@drawable/bg_dlg_sale_weekly_30"
        app:layout_constraintTop_toBottomOf="@id/btnClose"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogoPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logo_pro"
        app:layout_constraintEnd_toEndOf="@id/bgView"
        app:layout_constraintTop_toTopOf="@id/bgView"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_14sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sale_title"
        android:textColor="@color/super_light"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/funnelsans_bold"
        app:layout_constraintEnd_toEndOf="@id/bgView"
        app:layout_constraintTop_toBottomOf="@id/imgLogoPro"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_14sdp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img30Percent"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/bg_30_percent_off_right"
        app:layout_constraintStart_toStartOf="@id/bgView"
        app:layout_constraintEnd_toEndOf="@id/bgView"
        app:layout_constraintTop_toBottomOf="@id/txtDialogTitle"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_56sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_4"
        android:backgroundTint="#7308080E"
        android:text="@string/try_text"
        android:textColor="@color/super_light"
        android:fontFamily="@font/funnel_sans_semibold"
        android:textSize="@dimen/_11sdp"
        android:paddingHorizontal="@dimen/_9sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/bgView"
        app:layout_constraintEnd_toEndOf="@id/bgView"
        app:layout_constraintBottom_toBottomOf="@id/bgView"
        android:layout_marginBottom="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_48sdp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClaimOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_8_weekly"
        android:fontFamily="@font/funnelsans_extrabold"
        android:paddingVertical="@dimen/_9sdp"
        android:text="@string/btn_claim_offer"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/bgView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/super_light"
        android:fontFamily="@font/funnelsans_regular"
        android:paddingVertical="@dimen/_6sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintTop_toBottomOf="@id/btnClaimOffer"/>

</androidx.constraintlayout.widget.ConstraintLayout>