<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F7FF"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F7FF"
        android:paddingBottom="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="@dimen/_6sdp"
            android:layout_height="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:background="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/toggleGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_toggle"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/_250sdp"
            app:layout_constraintWidth_percent="0.6">

            <RadioButton
                android:id="@+id/btnWeekly"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_selection_left"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/readex_pro_regular"
                android:gravity="center"
                android:text="@string/weekly"
                android:textColor="@color/toggle_text_color"
                android:textSize="@dimen/_11sdp" />

            <RadioButton
                android:id="@+id/btnLifetime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_selection_right"
                android:button="@null"
                android:fontFamily="@font/readex_pro_regular"
                android:gravity="center"
                android:text="@string/lifetime"
                android:textColor="@color/toggle_text_color"
                android:textSize="@dimen/_11sdp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/readex_pro_bold"
            android:gravity="center_horizontal"
            android:text="@string/pw_onboarding_title"
            android:textAllCaps="true"
            android:textColor="#0F1E47"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleGroup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackGround"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_pw_onboarding"
            app:layout_constraintDimensionRatio="H,1:0.78"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtFee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/readex_pro_regular"
            android:gravity="center_horizontal"
            android:text="@string/unlock_feature_subtitle"
            android:textColor="#0F1E47"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBackGround" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llFreeTrial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/bg_radius_12_border_1"
            android:minHeight="@dimen/_44sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFee">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFreeTrial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/readex_pro_regular"
                android:text="@string/free_trial_enabled"
                android:textColor="#0F1E47"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/swTrial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swTrial"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:checked="true"
                android:clickable="true"
                android:minWidth="@dimen/_40sdp"
                android:thumb="@drawable/thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:thumbTintMode="src_over"
                app:track="@drawable/track"
                app:trackTint="@null"
                app:trackTintMode="src_over" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/bg_radius_12"
            android:backgroundTint="#0F1E47"
            android:fontFamily="@font/readex_pro_bold"
            android:minHeight="@dimen/_44sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/btn_try"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llFreeTrial" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:elevation="8dp"
            android:indeterminateTint="#66FFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/btnTry"
            app:layout_constraintEnd_toEndOf="@id/btnTry"
            app:layout_constraintStart_toStartOf="@id/btnTry"
            app:layout_constraintTop_toTopOf="@id/btnTry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/readex_pro_regular"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/policy2"
            android:textColor="#4D5A68"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>